07 - use tf 1.10.0 without GPU

--- a/notebooks/07_Main_Exercise.ipynb
+++ b/notebooks/07_Main_Exercise.ipynb
@@ -20,9 +20,8 @@
       "version": "3.6.7"
     },
     "kernelspec": {
-      "display_name": "Python 3",
-      "language": "python",
-      "name": "python3"
+      "name": "python3",
+      "display_name": "Python 3"
     }
   },
   "cells": [
@@ -71,6 +70,7 @@
         "            # Download the workshop repo and change to its directory\n",
         "            !git clone --recursive https://github.com/SachsLab/IntracranialNeurophysDL.git\n",
         "        os.chdir('IntracranialNeurophysDL')\n",
+        "    !pip install tensorflow==1.10.0\n",
         "    IN_COLAB = True\n",
         "except ModuleNotFoundError:\n",
         "    IN_COLAB = False\n",
@@ -345,7 +345,7 @@
         "                                     emg_hat.eval(feed_dict={spike:spike_te,emg:emg_te})]\n",
         "            print(\"Epoch:\", epoch, \"\\tAE_loss:\",ae_loss_, \"\\tEMG_loss:\",emg_loss_)\n",
         "            print(\"AE Train %VAF:\", utils.vaf(spike_tr,spike_hat_tr),\"\\AE Test %VAF:\", utils.vaf(spike_te,spike_hat_te))\n",
-        "            print(\"EMG Train %VAF:\", utils.vaf(emg_tr,emg_hat_tr),\"\\AE Test %VAF:\", utils.vaf(emg_te,emg_hat_te))\n",
+        "            print(\"EMG Train %VAF:\", utils.vaf(emg_tr,emg_hat_tr),\"\\EMG Test %VAF:\", utils.vaf(emg_te,emg_hat_te))\n",
         "    saver.save(sess, \"./Models/decoder\")"
       ],
       "execution_count": 0,
@@ -396,7 +396,7 @@
       },
       "source": [
         "## Domain Adaptation\n",
-        "![image.png](attachment:image.png)"
+        "![ADAN2](https://github.com/SachsLab/IntracranialNeurophysDL/blob/master/notebooks/img/ADAN2.png?raw=1)"
       ]
     },
     {
@@ -590,19 +590,6 @@
         "plt.legend(('Actual','Non-Aligned','Aligned'))\n",
         "plt.tight_layout()\n",
         "plt.show()"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "m2ayuECVTRWo",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
       ],
       "execution_count": 0,
       "outputs": []
