--- a/notebooks/XX_XX_CNN_macaque_pfc.ipynb
+++ b/notebooks/XX_XX_CNN_macaque_pfc.ipynb
@@ -493,7 +493,7 @@
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "def get_ds_train_valid(X, Y, b_train, b_test, batch_size=5, max_offset=0):\n",
+    "def get_ds_train_valid(X, Y, trn, tst, batch_size=5, max_offset=0):\n",
     "    # Convert Y from strings to integers.\n",
     "    classes, y = np.unique(Y, return_inverse=True)\n",
     "    n_trials = len(y)\n",
@@ -515,7 +515,7 @@
     "        y_dat = tf.cast(y_dat, tf.uint8)\n",
     "        return x_dat, y_dat\n",
     "    \n",
-    "    X_train, X_valid, y_train, y_valid = X[b_train], X[b_test], y[b_train], y[b_test]\n",
+    "    X_train, X_valid, y_train, y_valid = X[trn], X[tst], y[trn], y[tst]\n",
     "    n_train = len(y_train)\n",
     "    ds_train = tf.data.Dataset.from_tensor_slices((X_train, y_train))\n",
     "    ds_valid = tf.data.Dataset.from_tensor_slices((X_valid, y_valid))\n",
@@ -745,11 +745,11 @@
     "split_ix = 0\n",
     "best_val_accs = []\n",
     "hists = []\n",
-    "for b_train, b_test in splitter.split(X, Y):\n",
+    "for trn, tst in splitter.split(X, Y):\n",
     "    print(\"Starting split {}\".format(split_ix))\n",
     "    \n",
     "    # Get the training/testing data for this split.\n",
-    "    ds_train, ds_valid, n_train = get_ds_train_valid(X, Y, b_train, b_test, batch_size=BATCH_SIZE, max_offset=MAX_OFFSET)\n",
+    "    ds_train, ds_valid, n_train = get_ds_train_valid(X, Y, trn, tst, batch_size=BATCH_SIZE, max_offset=MAX_OFFSET)\n",
     "    \n",
     "    # Create new model\n",
     "    model = make_model(X.shape[1], X.shape[2], aug_offset=MAX_OFFSET)\n",
@@ -1406,8 +1406,8 @@
     "    \n",
     "    # Get the training/testing data for this split.\n",
     "    sss = StratifiedShuffleSplit(n_splits=1, train_size=P_TRAIN)\n",
-    "    b_train, b_test = next(sss.split(X, Y))\n",
-    "    ds_train, ds_valid, n_train = get_ds_train_valid(X, Y, b_train, b_test, batch_size=BATCH_SIZE, max_offset=MAX_OFFSET)\n",
+    "    trn, tst = next(sss.split(X, Y))\n",
+    "    ds_train, ds_valid, n_train = get_ds_train_valid(X, Y, trn, tst, batch_size=BATCH_SIZE, max_offset=MAX_OFFSET)\n",
     "    \n",
     "    model = make_model(X.shape[1], X.shape[2], aug_offset=MAX_OFFSET,\n",
     "                       n_temporal_filters=n_temporal_filters,\n",
