--- a/notebooks/02_01_basic_lda.ipynb
+++ b/notebooks/02_01_basic_lda.ipynb
@@ -10,9 +10,6 @@
     "# Introduction to Shallow Linear Machine Learning\n",
     "This notebook is part of the [SachsLab Workshop for Intracranial Neurophysiology and Deep Learning](https://github.com/SachsLab/IntracranialNeurophysDL).\n",
     "\n",
-    "### Normalize Environments\n",
-    "Run the first two cells to normalize Local / Colab environments, then proceed below for the lesson.\n",
-    "\n",
     "<table class=\"tfo-notebook-buttons\" align=\"left\">\n",
     "  <td>\n",
     "    <a target=\"_blank\" href=\"https://colab.research.google.com/github/SachsLab/IntracranialNeurophysDL/blob/master/notebooks/02_01_basic_lda.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Run in Google Colab</a>\n",
@@ -21,6 +18,14 @@
     "    <a target=\"_blank\" href=\"https://github.com/SachsLab/IntracranialNeurophysDL/blob/master/notebooks/02_01_basic_lda.ipynb\"><img src=\"https://www.tensorflow.org/images/GitHub-Mark-32px.png\" />View source on GitHub</a>\n",
     "  </td>\n",
     "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Normalize Environments\n",
+    "Run the first two cells to normalize Local / Colab environments, then proceed below for the lesson."
    ]
   },
   {
@@ -749,13 +754,13 @@
     "fig = plt.figure(figsize=(8, 4), facecolor='white')\n",
     "coefs = lda.coef_.reshape(3, n_timepoints, n_channels)\n",
     "for y_ix, y_val in enumerate(uq_Y):\n",
-    "    plt.subplot(1, 3, y_ix + 1)\n",
+    "    plt.subplot(2, 3, y_ix + 1)\n",
     "    plt.imshow(coefs[y_ix].T)\n",
     "    plt.title(y_val)\n",
     "    plt.xlabel('timepoints')\n",
     "    plt.ylabel('channels')\n",
     "\n",
-    "fig = plt.figure()\n",
+    "plt.subplot(2, 1, 2)\n",
     "width = 0.25\n",
     "rms_coefs = np.sqrt(np.mean(coefs**2, axis=1))\n",
     "for y_ix, y_val in enumerate(uq_Y):\n",
