Good progress on CNN model inspection.

--- a/notebooks/02_01_basic_lda.ipynb
+++ b/notebooks/02_01_basic_lda.ipynb
@@ -182,12 +182,12 @@
     "\n",
     "W: The unknown variable (weights and biases).\n",
     "\n",
-    "| Exp. Type | Equation &nbsp;&nbsp;&nbsp;&nbsp;| X dim | Y | W | \n",
+    "| X dim | Exp. Type | Equation &nbsp;&nbsp;&nbsp;&nbsp;| Y | W | \n",
     "|---|---|---|---|---| \n",
-    "|BCI|$WX=Y$|space, time, trials|Intention/Behav.|Decoder|\n",
-    "|Stats|$WY=X$|space, time, trials|Task Cond.|Encoder|\n",
-    "|BCI|$WX=Y$|space, trials|Intention/Behav.|Spatial filter|\n",
-    "|Stats|$WY=X$|space, trials|Task Cond.|Spatial patterns|\n",
+    "|space, time, trials|BCI|$WX=Y$|Intention/Behav.|Decoder|\n",
+    "|space, time, trials|Stats|$WY=X$|Task Cond.|Encoder|\n",
+    "|space, trials|BCI|$WX=Y$|Intention/Behav.|Spatial filter|\n",
+    "|space, trials|Stats|$WY=X$|Task Cond.|Spatial patterns|\n",
     "\n",
     "---\n",
     "**Bonus** \n",
