More complete CNN model inspection.

--- a/notebooks/03_01_Intro_to_CNNs.ipynb
+++ b/notebooks/03_01_Intro_to_CNNs.ipynb
@@ -70,7 +70,7 @@
     "The highest-profile application of deep learning is machine vision. The most popular type of network\n",
     "in machine vision is a Convolutional Neural Network (CNN). As such, there are many, MANY wonderful\n",
     "tutorials about CNNs free on the internet. If you have trouble following this section then please take\n",
-    "a moment to read through one or two CNN tutorials.\n",
+    "a moment to read through one or two CNN tutorials. ([good example here](https://brohrer.github.io/how_convolutional_neural_networks_work.html))\n",
     "\n",
     "Before continuing, it's worth mentioning that CNNs were inspired by how the brain processes vision,\n",
     "and researchers are using CNNs to develop models of vision that they then test with neural data.\n",
