Update EEG/ECoG CNN table.

--- a/notebooks/03_02_CNN_faces_houses.ipynb
+++ b/notebooks/03_02_CNN_faces_houses.ipynb
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -244,13 +244,14 @@
       "Fold 3\n",
       "Fold 4\n",
       "Fold 5\n",
-      "3-class accuracy: 92.71758436944938\n"
+      "3-class accuracy: 93.0728241563055\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import StratifiedKFold\n",
+    "from sklearn.linear_model import LogisticRegression\n",
     "\n",
     "N_SPLITS = 5\n",
     "kwargs = {\n",
@@ -262,6 +263,7 @@
     "    'max_iter': 200\n",
     "}\n",
     "model = LogisticRegression(**kwargs)\n",
+    "scaler = StandardScaler()\n",
     "splitter = StratifiedKFold(n_splits=N_SPLITS)\n",
     "\n",
     "y_preds = []\n",
@@ -269,8 +271,12 @@
     "print(\"Performing {}-fold cross-validated logistic regression...\".format(N_SPLITS))\n",
     "for kfold, (trn, tst) in enumerate(splitter.split(X, Y)):\n",
     "    print(\"Fold {}\".format(kfold + 1))\n",
-    "    model.fit(X[trn].reshape(-1, np.prod(X.shape[1:])), Y[trn].ravel())\n",
-    "    y_preds.append(model.predict(X[tst].reshape(-1, np.prod(X.shape[1:]))))\n",
+    "    _x = X[trn].reshape(-1, np.prod(X.shape[1:]))\n",
+    "    _x = scaler.fit_transform(_x)\n",
+    "    model.fit(_x, Y[trn].ravel())\n",
+    "    _x_tst = X[tst].reshape(-1, np.prod(X.shape[1:]))\n",
+    "    _x_tst = scaler.transform(_x_tst)\n",
+    "    y_preds.append(model.predict(_x_tst))\n",
     "    y_true.append(Y[tst].ravel())\n",
     "\n",
     "y_preds = np.hstack(y_preds)\n",
@@ -284,7 +290,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can do the same with SVM, though for this problem it seems to do slightly worse..."
+    "We can do the same with SVM, which gives slightly different results..."
    ]
   },
   {
@@ -308,8 +314,8 @@
    ],
    "source": [
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn import svm\n",
     "from sklearn.model_selection import StratifiedKFold\n",
+    "from sklearn import svm\n",
     "\n",
     "N_SPLITS = 5\n",
     "kwargs = {\n",
@@ -354,7 +360,7 @@
     }
    },
    "source": [
-    "So even with way more features and without signal processing, we're getting fairly high accuracy at ~92%. Our goal is for the deep model to do at least as well, hopefully better, and we expect it will be useful in other ways too."
+    "So even with way more features and without signal processing, we're getting fairly high accuracy at ~93-94%. Our goal is for the deep model to do at least as well, hopefully better, and we expect it will be useful in other ways too."
    ]
   },
   {
@@ -374,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -445,20 +451,21 @@
     "## Create our model\n",
     "As in 02_02, our model objective is to transform ECoG data into multiclass classification scores.\n",
     "\n",
-    "There are already many models that others have developed for similar purposes:\n",
+    "There are already many models that others have developed for similar purposes. Here are some highlights, in no particular order:\n",
     "\n",
-    "* [EEG with transfer learning](https://iopscience.iop.org/article/10.1088/1741-2552/aaf3f6)\n",
-    "* [ECoG speech reconstruction](https://www.elen.ucl.ac.be/Proceedings/esann/esannpdf/es2018-102.pdf)\n",
-    "    * 2D CNN - channels x timestamps; amplitude data\n",
-    "* [ECoG CNNs with LSTMs](https://iopscience.iop.org/article/10.1088/1741-2552/aa9dbe/meta)\n",
-    "    1. CNN for spatial unmixing matrix [77] initialized with fast ICA\n",
-    "    1. 3 temporal CNN layers, with [2, 4, 8] filters of kernel size 1 x 17 per layer, initialized with biorthogonal wavelet 6.8.\n",
-    "* [ECoG CNNs with autoencoders](https://iopscience.iop.org/article/10.1088/1741-2552/aaf13f/pdf)\n",
-    "* [EEGNet](https://iopscience.iop.org/article/10.1088/1741-2552/aace8c)\n",
-    "    * [source](https://github.com/vlawhern/arl-eegmodels/blob/master/EEGModels.py#L58-L158)\n",
-    "* [EEG CNN with parallel early layers](https://iopscience.iop.org/article/10.1088/1741-2552/ab3bb4)\n",
+    "| Cit. | Summary | Arch. Highlights |\n",
+    "| ---- | ------- | ---------------- |\n",
+    "| [Fahimi et al., 2019](https://iopscience.iop.org/article/10.1088/1741-2552/aaf3f6) | Single-channel P300-like, w/ transfer learning. act. max. | 3 layers of very short time-domain convolutions |\n",
+    "| [Nagel and Spüler, 2019](https://www.ncbi.nlm.nih.gov/pubmed/31490999) | EEG2Code: CNN decodes binary stim patterns from EEG, matches target with same stim pattern. | spat filt -> temp conv. (64/300 Hz) -> temp conv (5/150 Hz). Uses relu -> maxpooling |\n",
+    "| [Angrick et al., 2018](https://www.elen.ucl.ac.be/Proceedings/esann/esannpdf/es2018-102.pdf) | CNN Speech regression | 2D CNN - channels x timestamps; amplitude data; 4 CNN blocks |\n",
+    "| [Xie et al., 2018](https://iopscience.iop.org/article/10.1088/1741-2552/aa9dbe/meta) | Decoding finger trajectory from ECoG | CNN for spat filter initialized with fast ICA -> 3 temporal CNN layers, scaled tanh, init. w/ biorthogonal wavelet 6.8 -> RNN to finger angle |\n",
+    "| [Pailla, Miller, and Gilja, 2019](https://iopscience.iop.org/article/10.1088/1741-2552/aaf13f/pdf) | per-channel autoencoder to spectrogram for t-f kernels; unsupervised electrode clustering for transfer learning | t-f conv. -> other conv. -> class. |\n",
+    "| [Lawhern et al., 2018](https://iopscience.iop.org/article/10.1088/1741-2552/aace8c) | EEGNet | temp. conv. --> spat. filt --> separable conv. [source](https://github.com/vlawhern/arl-eegmodels/blob/master/EEGModels.py#L58-L158) |\n",
+    "| [Farahat et al., 2019](https://iopscience.iop.org/article/10.1088/1741-2552/ab3bb4) | P300 task; saliency mapping; transfer learning | spat filt -> 2 parallel temp. conv. for fast and slow features; All tanh; Lots of arch. comparison testing. |\n",
+    "| [Schirrmeister et al., 2017](https://onlinelibrary.wiley.com/doi/full/10.1002/hbm.23730) | EEG CNN - tested many design decisions; interesting feature correlations | 4 CNN blocks; first block has separate temporal then spatial convolutions with linear act. in between |\n",
+    "| [Roy et al., 2019](https://iopscience.iop.org/article/10.1088/1741-2552/ab260c) | Review of 154 DL EEG papers | .. |\n",
     "\n",
-    "We are going to use a version of EEGNet with an added set of parallel layers at the beginning."
+    "We are going to use CNN that first does temp. conv. followed by spatial filter (like EEGNet), but the temporal convolution is going to have two parallel layers with short and long kernels  (like Farahat et al)."
    ]
   },
   {
@@ -524,7 +531,7 @@
     "from tensorflow.keras.constraints import max_norm\n",
     "from tensorflow.keras import layers\n",
     "\n",
-    "def make_model(T, C, aug_offset=100, n_classes=3,\n",
+    "def make_model(n_times, n_channels, aug_offset=100, n_classes=3,\n",
     "               n_temporal_short=8, len_temporal_short=28,\n",
     "               n_temporal_long=4, len_temporal_long=220,\n",
     "               D=2,\n",
@@ -536,23 +543,24 @@
     "               optimizer='Nadam'):\n",
     "\n",
     "    # Temporal kernel convolutions.\n",
-    "    _input = tf.keras.Input(shape=(T - aug_offset, C, 1))\n",
+    "    _input = tf.keras.Input(shape=(n_times - aug_offset, n_channels, 1))\n",
     "    \n",
     "    _y_short = layers.Conv2D(n_temporal_short, (len_temporal_short, 1),\n",
     "                             padding='same', use_bias=False)(_input)\n",
     "    _y_long = layers.Conv2D(n_temporal_long, (len_temporal_long, 1),\n",
     "                            padding='same', use_bias=False)(_input)\n",
     "    _y = layers.Concatenate(axis=-1)([_y_short, _y_long])\n",
+    "    # TODO: Activation... ?\n",
     "    _y = layers.BatchNormalization(axis=1)(_y)\n",
     "    \n",
     "    # Spatial Filter\n",
-    "    _y = layers.DepthwiseConv2D((1, C), use_bias=False,\n",
+    "    _y = layers.DepthwiseConv2D((1, n_channels), use_bias=False,\n",
     "                                depth_multiplier=D,\n",
     "                                kernel_regularizer=tf.keras.regularizers.l1_l2(l1=l1_reg, l2=l2_reg),\n",
     "                                depthwise_regularizer=tf.keras.regularizers.l1_l2(l1=l1_reg, l2=l2_reg),\n",
     "                                depthwise_constraint=max_norm(1.))(_y)\n",
     "    # The order of Activation and BathNormalization is switched here compared to EEGNet.\n",
-    "    # This is because we use relu. relu after normalization discards too much data.\n",
+    "    # This is because we might use relu. relu after normalization discards too much data.\n",
     "    _y = layers.Activation(activation)(_y)\n",
     "    _y = layers.BatchNormalization(axis=1)(_y)\n",
     "    _y = layers.AveragePooling2D((downsamp_1, 1))(_y)\n",
