Clearer text to download best model.

--- a/notebooks/03_02_CNN_faces_houses.ipynb
+++ b/notebooks/03_02_CNN_faces_houses.ipynb
@@ -772,10 +772,7 @@
         "print(\"%.2f%% (+/- %.2f%%)\" % (np.mean(best_val_accs), np.std(best_val_accs)))\n",
         "\n",
         "best_path = datadir / 'models' / (SUB_ID + '_model{}_best.h5'.format(np.argmax(best_val_accs)))\n",
-        "best_path.replace(datadir / 'models' / (SUB_ID + '_model_best_all.h5'))\n",
-        "\n",
-        "# Download 'best' model anytime with\n",
-        "# files.download(datadir / (SUB_ID + '_model_best_all.h5'))"
+        "best_path.replace(datadir / 'models' / (SUB_ID + '_model_best_all.h5'))"
       ],
       "execution_count": 10,
       "outputs": [
@@ -802,6 +799,21 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Omtr_87Oy-W-",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# (Chrome only) Download 'best' model anytime with\n",
+        "# files.download(datadir / 'models' / (SUB_ID + '_model_best_all.h5'))\n",
+        "# Need to enable 3rd party cookies: chrome://settings/content/cookies"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
