Changed colab init to use tensorflow_version magic.

--- a/notebooks/05_02_Auto_Encoder.ipynb
+++ b/notebooks/05_02_Auto_Encoder.ipynb
@@ -5,7 +5,6 @@
     "accelerator": "GPU",
     "colab": {
       "name": "Auto-Encoder",
-      "version": "0.3.2",
       "provenance": [],
       "collapsed_sections": [],
       "include_colab_link": true
@@ -58,18 +57,17 @@
       "metadata": {
         "colab_type": "code",
         "id": "ORzJBw94H8I3",
+        "outputId": "0a9b13a3-6615-4ac7-de9c-9dc2924748b1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 70
-        },
-        "outputId": "0a9b13a3-6615-4ac7-de9c-9dc2924748b1"
+        }
       },
       "source": [
         "from pathlib import Path\n",
         "import os\n",
         "try:\n",
-        "    # See if we are running on google.colab\n",
-        "    import google.colab\n",
+        "    %tensorflow_version 2.x  # Select tensorflow version, only in Colab.\n",
         "    from google.colab import files\n",
         "    os.chdir('..')\n",
         "    if not (Path.home() / '.kaggle').is_dir():\n",
@@ -85,8 +83,6 @@
         "            !git clone --recursive https://github.com/SachsLab/IntracranialNeurophysDL.git\n",
         "        os.chdir('IntracranialNeurophysDL')\n",
         "    IN_COLAB = True\n",
-        "    # Setup tensorflow 2.0\n",
-        "    !pip install -q tensorflow-gpu==2.0.0-rc0\n",
         "except ModuleNotFoundError:\n",
         "    IN_COLAB = False\n",
         "    import sys\n",
@@ -103,7 +99,7 @@
         "    except PermissionError:\n",
         "        print(\"Unable to remove logs directory.\")"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -145,11 +141,11 @@
       "metadata": {
         "colab_type": "code",
         "id": "vUJxpGCVI8NQ",
+        "outputId": "b6688c03-6200-48bb-90ff-693da31d8fb9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 105
-        },
-        "outputId": "b6688c03-6200-48bb-90ff-693da31d8fb9"
+        }
       },
       "source": [
         "# Download and unzip data\n",
@@ -166,7 +162,7 @@
         "else:\n",
         "    print(\"Data directory found. Skipping download.\")"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -204,11 +200,11 @@
       "metadata": {
         "colab_type": "code",
         "id": "Mm_H6jIXLi1z",
+        "outputId": "28e9b653-a7b9-4634-e48a-df30e8aa1eff",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 498
-        },
-        "outputId": "28e9b653-a7b9-4634-e48a-df30e8aa1eff"
+        }
       },
       "source": [
         "# Load data, convert to float-32 and add extra dim for tensorflow convolution layers\n",
@@ -221,7 +217,7 @@
         "plt.plot(wf[np.random.randint(0, wf.shape[0], n_to_plot),:, 0].T)\n",
         "plt.title(str(n_to_plot) + ' waveforms from ' + str(wf.shape[0]) + ' total');"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -256,11 +252,11 @@
       "metadata": {
         "colab_type": "code",
         "id": "zlj2AH0ULye5",
+        "outputId": "bb3f97a3-e276-4354-838b-e0598467ed30",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 335
-        },
-        "outputId": "bb3f97a3-e276-4354-838b-e0598467ed30"
+        }
       },
       "source": [
         "# Z-scoring the data\n",
@@ -281,7 +277,7 @@
         "                                                z_wf[::30000, :, 0].shape[1])).T)\n",
         "plt.title('Z-scored waveforms + noise');"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -628,17 +624,17 @@
       "metadata": {
         "colab_type": "code",
         "id": "golwnrOBuT9S",
+        "outputId": "73d22ee7-cf47-4890-8ad5-b563a2ae5cee",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 478
-        },
-        "outputId": "73d22ee7-cf47-4890-8ad5-b563a2ae5cee"
+        }
       },
       "source": [
         "print('Add noise = ' + str(ADD_NOISE))\n",
         "train_model(ADD_NOISE)"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -693,11 +689,11 @@
       "metadata": {
         "colab_type": "code",
         "id": "tzce3jiihrW0",
+        "outputId": "50c0049c-6df9-4052-a548-e2f9c9b3b42e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 733
-        },
-        "outputId": "50c0049c-6df9-4052-a548-e2f9c9b3b42e"
+        }
       },
       "source": [
         "def plot_loss():\n",
@@ -741,7 +737,7 @@
         "\n",
         "plot_loss()"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -781,16 +777,16 @@
       "metadata": {
         "colab_type": "code",
         "id": "8do9NU8r-OO8",
+        "outputId": "9a52f6b3-0f7f-40fb-de69-fc09f3a5f055",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "9a52f6b3-0f7f-40fb-de69-fc09f3a5f055"
+        }
       },
       "source": [
         "model.latent_dim"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -825,11 +821,11 @@
       "metadata": {
         "colab_type": "code",
         "id": "FwFL86t3Q_eh",
+        "outputId": "c7e9e991-6062-4b0d-a6a5-a18c85a85f76",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 390
-        },
-        "outputId": "c7e9e991-6062-4b0d-a6a5-a18c85a85f76"
+        }
       },
       "source": [
         "def pca_comp():\n",
@@ -869,7 +865,7 @@
         "\n",
         "model_out, pca_out, pca = pca_comp()"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -904,11 +900,11 @@
       "metadata": {
         "colab_type": "code",
         "id": "TBZaoAKHaiFx",
+        "outputId": "6a4c7350-51a9-41d9-a824-71a4c9d8d387",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 995
-        },
-        "outputId": "6a4c7350-51a9-41d9-a824-71a4c9d8d387"
+        }
       },
       "source": [
         "def wave_generation(model_out, pca_out, pca):\n",
@@ -956,7 +952,7 @@
         "  \n",
         "min_max_model, min_max_pca = wave_generation(model_out, pca_out, pca)"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1030,11 +1026,11 @@
       "metadata": {
         "colab_type": "code",
         "id": "-mo0gkgfCnbp",
+        "outputId": "b6d20482-1fcc-44c0-c34b-a9fcef1331c2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "b6d20482-1fcc-44c0-c34b-a9fcef1331c2"
+        }
       },
       "source": [
         "def plot_features(min_max_model, min_max_pca):\n",
@@ -1099,7 +1095,7 @@
         "    \n",
         "plot_features(min_max_model, min_max_pca)"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1144,11 +1140,11 @@
       "metadata": {
         "colab_type": "code",
         "id": "y3vjM49qTNxD",
+        "outputId": "fd744015-90c7-4262-a9da-83d6137ef1e4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 461
-        },
-        "outputId": "fd744015-90c7-4262-a9da-83d6137ef1e4"
+        }
       },
       "source": [
         "# Model parameters\n",
@@ -1175,7 +1171,7 @@
         "\n",
         "train_model(ADD_NOISE)"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1215,11 +1211,11 @@
       "metadata": {
         "colab_type": "code",
         "id": "sTxU8azkgaWs",
+        "outputId": "47466181-183c-45b8-ccc6-147d1971411a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "47466181-183c-45b8-ccc6-147d1971411a"
+        }
       },
       "source": [
         "# to re-run the above plots\n",
@@ -1228,7 +1224,7 @@
         "min_max_model, min_max_pca = wave_generation(model_out, pca_out, pca)\n",
         "plot_features(min_max_model, min_max_pca)"
       ],
-      "execution_count": 19,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1352,11 +1348,11 @@
       "metadata": {
         "colab_type": "code",
         "id": "fRFKr1oH7iw4",
+        "outputId": "a04ed159-467f-4f37-ac5b-92ac74689d3d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 544
-        },
-        "outputId": "a04ed159-467f-4f37-ac5b-92ac74689d3d"
+        }
       },
       "source": [
         "from IPython import display\n",
@@ -1413,7 +1409,7 @@
         "    time.sleep(.001) \n",
         "  "
       ],
-      "execution_count": 20,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1446,11 +1442,11 @@
       "metadata": {
         "colab_type": "code",
         "id": "Jo6jhHZ-gtjr",
+        "outputId": "5d378066-5745-48be-8fe0-ebe7f101f32c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "5d378066-5745-48be-8fe0-ebe7f101f32c"
+        }
       },
       "source": [
         "# to re-run the above plots\n",
@@ -1459,7 +1455,7 @@
         "min_max_model, min_max_pca = wave_generation(model_out, pca_out, pca)\n",
         "plot_features(min_max_model, min_max_pca)"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1559,11 +1555,11 @@
       "metadata": {
         "colab_type": "code",
         "id": "OO6qYFk2HiJ-",
+        "outputId": "33e375e8-fdfc-44f5-a14c-68b63a38e7d1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 594
-        },
-        "outputId": "33e375e8-fdfc-44f5-a14c-68b63a38e7d1"
+        }
       },
       "source": [
         "# Adding a new plot to see if this improves spike clustering.\n",
@@ -1585,7 +1581,7 @@
         "    ax1.plot(pair[0], pair[1], '.', color=colormap)\n",
         "    ax2.plot(examples[id,:], color=colormap);\n"
       ],
-      "execution_count": 22,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1635,11 +1631,11 @@
       "metadata": {
         "colab_type": "code",
         "id": "SwjZ-_UQuQ78",
+        "outputId": "f4e4a461-c273-4851-f386-6bb24971aa0c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 544
-        },
-        "outputId": "f4e4a461-c273-4851-f386-6bb24971aa0c"
+        }
       },
       "source": [
         "# from the LFADS paper they start with beta = 0 and slowly increase (KL WARMUP)\n",
@@ -1700,7 +1696,7 @@
         "    time.sleep(.001) \n",
         "  "
       ],
-      "execution_count": 23,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
