Colab use magic tensorflow_version

--- a/notebooks/03_02_CNN_faces_houses.ipynb
+++ b/notebooks/03_02_CNN_faces_houses.ipynb
@@ -5,7 +5,6 @@
     "accelerator": "GPU",
     "colab": {
       "name": "03_02_CNN_faces_houses.ipynb",
-      "version": "0.3.2",
       "provenance": []
     },
     "kernelspec": {
@@ -93,8 +92,7 @@
         "from pathlib import Path\n",
         "import os\n",
         "try:\n",
-        "    # See if we are running on google.colab\n",
-        "    import google.colab\n",
+        "    %tensorflow_version 2.x  # Select tensorflow version, only in Colab.\n",
         "    from google.colab import files\n",
         "    os.chdir('..')\n",
         "    if not (Path.home() / '.kaggle').is_dir():\n",
@@ -110,8 +108,6 @@
         "            !git clone --recursive https://github.com/SachsLab/IntracranialNeurophysDL.git\n",
         "        os.chdir('IntracranialNeurophysDL')\n",
         "    IN_COLAB = True\n",
-        "    # Setup tensorflow 2.0\n",
-        "    !pip install -q tensorflow-gpu==2.0.0-rc0\n",
         "except ModuleNotFoundError:\n",
         "    IN_COLAB = False\n",
         "    import sys\n",
@@ -128,7 +124,7 @@
         "    except PermissionError:\n",
         "        print(\"Unable to remove logs directory.\")"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -217,7 +213,7 @@
         "else:\n",
         "    print(\"Data directory found. Skipping download.\")"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -276,7 +272,7 @@
         "    n_trials, len(ax_info['timestamps']), ax_info['timestamps'][0], ax_info['timestamps'][-1],\n",
         "    ax_info['fs'], X.shape[-1]))"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -351,7 +347,7 @@
         "pcnt_corr = 100 * np.sum(y_preds == y_true) / len(y_preds)\n",
         "print(\"3-class accuracy: {}\".format(pcnt_corr))"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -426,7 +422,7 @@
         "pcnt_corr = 100 * np.sum(y_preds == y_true) / len(y_preds)\n",
         "print(\"3-class accuracy: {}\".format(pcnt_corr))"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -638,7 +634,7 @@
         "model.summary()\n",
         "reset_keras(model)"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -777,7 +773,7 @@
         "best_path = datadir / 'models' / (SUB_ID + '_model{}_best.h5'.format(np.argmax(best_val_accs)))\n",
         "best_path.replace(datadir / 'models' / (SUB_ID + '_model_best_all.h5'))"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -856,7 +852,7 @@
         "avg_val_loss = np.mean(np.min(val_loss, axis=-1), axis=0)\n",
         "print(\"Average of minimum validation losses: {:.3f}\".format(avg_val_loss))"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
